--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@ $(document).ready(function(){
                   <h3><a  href="#">10 Best Selling Car Brands</a>
                   </h3>
                   <p>
-                 May has gone by too quickly, and it is time for yet another sales report! Here are the top 10 selling brands in May 2022.
+                 May has gone by too quickly, and it is time for yet another sales report! Here are the top 10 selling brands in May 2022. The Honda City HEV, the Mercedes Maybach series  seem to be winning the race. 
                   </p>
                 </div>
                   <div class="image-meta clearfix">
