--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@ $(document).ready(function(){
                   </h3>
                   <p>
                  May has gone by too quickly, and it is time for yet another sales report! Here are the top 10 selling brands in May 2022. The Honda City HEV, the Mercedes Maybach series  seem to be winning the race. 
-                  </p>
+         Today, let’s take a look at the 5 most sold oput car in June!         </p>
                 </div>
                   <div class="image-meta clearfix">
                     <p> <i class="fa fa-user"></i>
