--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@ $(document).ready(function(){
 			 Our team do not just vacuum up the dirt and debris sitting on the surface, it makes sure to get all the sand, dust and debris buried in the roots of the carpet and upholstery fibers. Unless you remove all the dirt, any further cleaning will be compromised and the overall result will be inferior. As industry professionals, your customers expect a level of service they cannot do on their own.				  
 							  </p>
                 </div>
-              </div>
+		</div>
+		<div class= "flexybox">
                <div class="col-3 col-6">
                 	<div class="service-item">
                 	<i class="flaticon-seat"></i>
@@ -303,6 +304,7 @@ $(document).ready(function(){
               </div>
             </div>
           </div>
+	</div>
         </div>
 
          <div class="facts" >
