--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ $(document).ready(function(){
                         </div>
                         <div class="about-content">
 						  <p> <b style="font-size:30px">Car</b> detailing refers to cleaning and protecting your car from top to bottom using various tools and different techniques which are usually not used in the traditional car cleaning or car washing methods.
-                               and in our company provides you various car Washing <b>DEATAILINGS</b>             </p>
+                               and  our company provides you various car Washing <b>DEATAILINGS</b>             </p>
                             <ul>
                                 <li><i class="far fa-check-circle"></i>Seats washing</li>
                                 <li><i class="far fa-check-circle"></i>Vacuum cleaning</li>
@@ -298,7 +298,7 @@ $(document).ready(function(){
                 	<div class="service-item">
                 	<i class="flaticon-car-service-2"></i>
                 	<h3>Wet Cleaning</h3>
-                	<p>It is always better if your car interior cleaning  has job by a professional as We are the one who know and cares about your vehicle the most. 
+                	<p>It is always better if your car interior cleaning  job has been done by a professional as We are the one who know and care about your vehicle the most. 
 							 In Our wet claning, we provide extensive clening deep down the the very narrow corners of your car.
 							 </p>
               </div>
@@ -559,7 +559,7 @@ $(document).ready(function(){
                             </div>
                             <div class="image-text">
                               <h2>Adam Phillips</h2>
-                              <p>Engineer</p>
+                              <p>Senior Engineer</p>
                               <div class="team-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
