--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@ $(document).ready(function(){
           </div>
 
           <div class="footer">
-            <div class="container clearfix " style="margin:45px ">
+            <div class="container clearfix msf"  ">
             <div class="col-4">
                <h1> Get In Touch</h1>
                <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
