--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ $(document).ready(function(){
                </div>
 
             <div class="col-lg-3 col-lg-6 counterfloat">
-                <div class="   clearfix">
+                <div class="flex   clearfix">
                         <div class="facts-item">
                             <i class="fa fa-user"></i>
                           </div>
@@ -351,7 +351,7 @@ $(document).ready(function(){
 
       
               <div class="col-lg-3 col-lg-6 counterfloat">
-                <div class=" clearfix">
+                <div class="flex clearfix">
                         <div class="  facts-item">
                             <i class="fa fa-check"></i>
                           </div>
