--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ $(document).ready(function(){
                 <a href="">Contact Us</a>
                 <a href="">Our Service</a>
                 <a href="">Service Points</a>
-                <a href="">Pricing Plan</a>
+                <a  class = "mb" href="">Pricing Plan</a>
               </div>
             </div>
 
@@ -791,7 +791,7 @@ $(document).ready(function(){
                             <a href="">Privacy policy</a>
                             <a href="">Cookies</a>
                             <a href="">Help</a>
-                            <a href="">FQAs</a>
+                            <a href="">FAQs</a>
                         </div>
                       </div>
 
