--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ $(document).ready(function(){
                                   </div>
 
                                   <div class="col-6 clearfix">
-                      <i class="fa fa-map-marker-alt" style="float:left"></i>
+                      <i class="fa fa-map-marker-alt button-image" style="float:lef"></i>
                        <div class="location-text">
                                         <h3>Car Washing Point</h3>
                                         <p class="para"> 670 Chapel St 7</p>
